--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
     "displayName": "Popping and Locking Theme",
     "description": "Vivid and well balanced theme for VS Code.",
     "version": "2.0.6",
-    "publisher": "hedinne",
-    "author": "Hedinn Eiriksson",
+    "publisher": "kkpudi",
+    "author": "Karthik Karyamapudi",
     "license": "mit",
     "engines": {
         "vscode": "^1.12.0"
@@ -60,10 +60,10 @@
             "path": "images/json.png"
         }
     ],
-    "homepage": "https://github.com/hedinne/popping-and-locking-vscode/blob/master/README.md",
+    "homepage": "https://github.com/kk1423/popping-and-locking-vscode/blob/master/README.md",
     "repository": {
         "type": "git",
-        "url": "https://github.com/hedinne/popping-and-locking-vscode.git"
+        "url": "https://github.com/kk1423/popping-and-locking-vscode.git"
     },
     "contributes": {
         "themes": [
@@ -75,8 +75,6 @@
         ]
     },
     "__metadata": {
-        "id": "1edaf626-3d50-4223-abdb-0a09c33bb1e9",
-        "publisherDisplayName": "hedinne",
-        "publisherId": "65a088bc-3a5e-485e-83a2-87837645d68b"
+        "publisherDisplayName": "kkpudi"
     }
 }
